# ros_reality

./: .gitattributes  .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  LICENSE  Log.txt  README.md  ros_reality.Editor.csproj  ros_reality.csproj  ros_reality.sln  ros_reality.userprefs
Assets/: Baxter.prefab  EinMenuScript.cs  GlobalVariableHolder.cs  IKStatus.cs  InitializeBaxterModel.cs  NewBehaviourScript.cs  PlayerNumberSync.cs  PointCloundAdjuster.cs  Root.prefab
Assets/Editor/: ObjExporterScript.cs
Assets/H2R/: Left_arm_low_poly.prefab  Left_arm_very_low_poly.prefab  Right_arm_low_poly.prefab  Right_arm_very_low_poly.prefab  Robot_low_poly.prefab  Robot_very_low_poly.prefab
Assets/Kinect/: MainScene.unity
Assets/Materials/: Black.mat  DepthGeometryJoinedQuads.mat  DepthGeometryPointSprites.mat  H1_H1Mat.mat  LeftMaterial.mat  (+6 more)
Assets/Resources/URDFs/Aibo/: LBdown.dae  LBpaw.dae  LBup.dae  LFdown.dae  LFpaw.dae  LFup.dae  RBdown.dae  RBpaw.dae  RBup.dae  RFdown.dae  RFpaw.dae  RFup.dae  aibo.xml  body1.dae  head.dae  package.xml  tail.dae
Assets/Resources/URDFs/Aibo/body1/: body1.stl
Assets/Resources/URDFs/Aibo/meshes/: LBdown.stl  LBpaw.stl  LBup.stl  LFdown.stl  LFpaw.stl  LFup.stl  RBdown.stl  RBpaw.stl  RBup.stl  RFdown.stl  RFpaw.stl  RFup.stl  head.stl  tail.stl
ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  ProjectVersion.txt.orig  QualitySettings.asset  TagManager.asset
ros_reality_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  level0.resS  sharedassets0.assets
(+716 files in other folders)
